<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.srikar.history20.MainActivity"
    android:background="@color/appbg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Intro"
        android:layout_marginTop="66dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/intro"
        android:textSize="@dimen/fontsize1"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/txtlvl"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro2"
        android:text="@string/intro2"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/fontsize1"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/txtlvl"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro3"
        android:text="@string/intro3"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/fontsize1"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/txtlvl"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conti"
        android:textSize="@dimen/fontsize2"
        android:textColor="@color/white"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:id="@+id/conti"
        android:background="@color/action"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/vi"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textColor="@color/white"
        android:textSize="@dimen/fontsize2"
        android:layout_marginTop="50dp"
        android:background="@color/action"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
